--- a/klay_server/package.json
+++ b/klay_server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "caver-js": "^1.10.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "truffle-hdwallet-provider-klaytn": "^1.4.2"
   }
